<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Youchuzz</string>
	
	<!-- Activity Login -->
	<string name="login_title">Youchuzz</string>
	<string name="login_ui_help">Ask for your friend\'s opinion in a very simple way!</string>
	<string name="login_ui_logo">Youchuzz logo</string>
	<string name="login_ui_facebook">Login with Facebook</string>
	<string name="login_ui_youchuzz">Logging in with Youchuzz&#8230;</string>
	<string name="login_facebook_clicked_cancel">You need to allow Facebook in order to use Youchuzz</string>
	
	<!-- Activity Home -->
	<string name="home_title">Home – Youchuzz</string>
	<string name="home_create">Create new chuzz</string>
	<string name="home_loading">Loading your chuzzs</string>
	<string name="home_item_vote">vote</string>
	<string name="home_ui_description">Send two pictures to choose between, and ask your friends for their opinion.</string>
	<string name="home_ui_item_title">{{ title }}</string>
	<string name="home_ui_item_desc">{{v}} vote{{vs}}</string>
	<string name="home_ui_item_desc_long">, created {{d}}</string>
	<string name="home_ui_item_img">Image</string>
	<string name="home_menu_logout">Logout</string>

	<!-- Activity Create -->
	<string name="create_title">Content for new chuzz</string>
	<string name="create_pick_image">Select picture</string>
	<string name="create_menu_image">Pictures</string>
	<string name="create_menu_photo">Capture Picture</string>
	<string name="create_ui_title">Chuzz\' title</string>
	<string name="create_ui_save">Next</string>
	<string name="create_ui_content_description">Click to select content</string>
	<string name="create_ui_content_preview">Content preview</string>
	<string name="create_toast_uploading">Uploading content, this may take some time.</string>
	<string name="create_error_content">Unable to load this content. Please use another source.</string>
	<string name="create_error_notitle">You need to add a title for your chuzz.</string>
	<string name="create_error_twocontents">You need to select two contents before saving this chuzz.</string>
	
	<!-- Activity Friend -->
	<string name="friends_title">Select your friends</string>
	<string name="friends_loading">Loading your friends</string>
	<string name="friends_ui_wall">Publish on my wall</string>
	<string name="friends_ui_save">Send my chuzz</string>
	<string name="friends_ui_item_name">{{ name }}</string>
	<string name="friends_ui_item_avatar">Friend image</string>
	<string name="friends_error_none_selected">Select at least one friend.</string>
	<string name="friends_toast_success">Your friends have been notified.</string>
	
	<!-- Activity Chuzz -->
	<string name="chuzz_ui_comments">Commentaires →</string>
	<string name="chuzz_ui_details">{{ details }}</string>
	<string name="chuzz_ui_item_details">{{ nbVotes }}</string>
	<string name="chuzz_ui_item_content">Chuzz content</string>
	<string name="chuzz_error_badlaunch">Loading activity without picking any chuzz.</string>
	
	<!-- Activity Comment -->
	<string name="comment_ui_chuzz">← Chuzz</string>
</resources>