<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/imageView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/home_item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dip"
        android:contentDescription="@string/home_ui_item_img"
        android:src="@drawable/temp_chuzz_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_ui_item_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/home_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/home_ui_item_desc" />
    </LinearLayout>

</LinearLayout>